# MIMIC_ROBOT_GLOVE

./: README.md  WIRING.md
arduino/glove_firmware/: glov.ino
install/: setup.sh
install/mars_hand/share/mars_hand/: package.dsv  package.zsh
install/mars_hand/share/mars_hand/launch/: display.launch.py
install/mars_hand/share/mars_hand/rviz/: config.rviz
log/: latest_build
proj/install/: local_setup.sh
proj/install/mars_hand/share/mars_hand/: package.bash  package.sh
proj/install/mars_hand/share/mars_hand/urdf/: hand.urdf
proj/ros2_ws/install/: local_setup.sh  setup.sh
proj/ros2_ws/install/mars_hand/share/mars_hand/: package.ps1  package.sh
proj/ros2_ws/src/mars_hand/: package.xml  setup.py
proj/ros2_ws/src/mars_hand/urdf/: hand.urdf
ros2_ws/install/mars_hand/lib/mars_hand/: serial_bridge
ros2_ws/install/mars_hand/share/mars_hand/launch/: display.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/mars_hand/: setup.cfg
