<?xml version="1.0"?>
<package format="3">
  <name>mars_hand</name>
  <version>1.0.0</version>
  <description>MARS Project — flex-sensor glove to RViz hand simulation</description>
  <maintainer email="kaustubh@todo.com">Kaustubh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
